<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, SAMPleActivity!</string>
    <string name="app_name">SAMPle</string>
    <string name="start_name">SAMPle</string>
    <string name="go">Go!</string>
    <string name="start_instruction">music will be selected after 10s of stepping rhythm analysis</string>
    <string name="player_play">Play</string>
    <string name="player_pause">Pause</string>
    <string name="player_next">Next</string>
    <string name="player_previous">Previous</string>
    <string name="player_stop">Stop</string>
</resources>