<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/start_name"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="48sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="109dp"
        android:layout_height="250dp"
        android:layout_marginTop="15dp"
        android:scaleType="fitStart"
        android:src="@drawable/logo_gross" />

    <Button
        android:id="@+id/button_go"
        android:layout_width="89dp"
        android:layout_height="73dp"
        android:onClick="onbutton_go"
        android:text="@string/go" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="@string/start_instruction"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="11sp" />

</LinearLayout>